# playground-spa-miso

./: .ghci  .gitignore  .hlint.yaml  Doctests.hs  README.md  Setup.hs  app.cabal  cabal.project  default.nix  ghcjs.project  hie.yaml  index.html  miso-spa.cabal  package-lock.json  package.json  package.yaml  shell-ghcjs.nix  shell.nix
.github/workflows/: cd.yml  ci.yml
app/: Main.hs
src/: App.hs  Main.hs  Prelude.hs  Routes.hs  Types.hs  Update.hs  View.hs  Zrelude.hs
src/Custom/: Prelude.hs
test/: DoctestSpec.hs  Spec.hs
