name:                app
version:             0.1.0.0
synopsis:            Miso SPA playground application
category:            Web
build-type:          Simple
cabal-version:       >=1.10


executable app
  main-is: Main.hs
  hs-source-dirs:
      src
  default-language: Haskell2010
  default-extensions: ApplicativeDo BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable EmptyCase EmptyDataDecls ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
  -- ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields -fhide-source-paths -Wno-type-defaults
  build-depends:
      base
    , lens
    , miso
    , network-uri
    , servant
  if !impl(ghcjs)
    build-depends:
         jsaddle
       , jsaddle-warp
       , transformers
       , warp
       , websockets
       , servant

-- library
--   hs-source-dirs:
--       src
--   exposed-modules:
--       App
--   other-modules:
--       Types
--       -- Paths_app
--   build-depends:
--       base
--     , miso
--     , lens
--   default-language: Haskell2010


-- executable app
--   main-is: Main.hs
--   hs-source-dirs:
--       app
--   build-depends:
--       base
--   if !impl(ghcjs)
--     build-depends:
--          app
--        , miso
--        , jsaddle
--        , jsaddle-warp
--        , transformers
--        , warp
--        , websockets
--   default-language: Haskell2010


-- test-suite app-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--       test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       app
--     , base
--   other-modules:
--       Paths_app
--   default-language: Haskell2010
